;Judge/Temporary_Error/294.log
In file included from code.cpp:1:0:
../../data/1012/1012_1.out:1:1: error: expected unqualified-id before numeric constant
 2.00 1.00 3.00 4.00 0.00 
 ^
